--- a/index.html
+++ b/index.html
@@ -156,6 +156,182 @@ sqldf(query)</code></pre>
 ## 24 thomamy01   1927    NYA  0
 ## 25  weraju01   1927    NYA  1</code></pre>
 </div>
+<div id="september-5-2017" class="section level2">
+<h2>September 5, 2017</h2>
+<p>Find All Instances Where Yankees Have Hit 40 Homeruns or More.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID,teamID,yearID,HR FROM Batting
+WHERE teamID='NYA' and HR&gt;=40&quot;
+
+sqldf(query)</code></pre>
+<pre><code>##     playerID teamID yearID HR
+## 1   ruthba01    NYA   1920 54
+## 2   ruthba01    NYA   1921 59
+## 3   ruthba01    NYA   1923 41
+## 4   ruthba01    NYA   1924 46
+## 5   ruthba01    NYA   1926 47
+## 6  gehrilo01    NYA   1927 47
+## 7   ruthba01    NYA   1927 60
+## 8   ruthba01    NYA   1928 54
+## 9   ruthba01    NYA   1929 46
+## 10 gehrilo01    NYA   1930 41
+## 11  ruthba01    NYA   1930 49
+## 12 gehrilo01    NYA   1931 46
+## 13  ruthba01    NYA   1931 46
+## 14  ruthba01    NYA   1932 41
+## 15 gehrilo01    NYA   1934 49
+## 16 gehrilo01    NYA   1936 49
+## 17 dimagjo01    NYA   1937 46
+## 18 mantlmi01    NYA   1956 52
+## 19 mantlmi01    NYA   1958 42
+## 20 mantlmi01    NYA   1960 40
+## 21 mantlmi01    NYA   1961 54
+## 22 marisro01    NYA   1961 61
+## 23 jacksre01    NYA   1980 41
+## 24 martiti02    NYA   1997 44
+## 25 giambja01    NYA   2002 41
+## 26 giambja01    NYA   2003 41
+## 27 rodrial01    NYA   2005 48
+## 28 rodrial01    NYA   2007 54
+## 29 grandcu01    NYA   2011 41
+## 30 grandcu01    NYA   2012 43</code></pre>
+<p>Find All Examples Where a Player Had More Than 40 Homeruns but Less Than 60 Strikeouts.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID,teamID,yearID,HR,SO FROM Batting
+WHERE teamID='NYA' and HR&gt;40 and SO&lt;60&quot;
+sqldf(query)</code></pre>
+<pre><code>##    playerID teamID yearID HR SO
+## 1 gehrilo01    NYA   1931 46 56
+## 2  ruthba01    NYA   1931 46 51
+## 3 gehrilo01    NYA   1934 49 31
+## 4 gehrilo01    NYA   1936 49 46
+## 5 dimagjo01    NYA   1937 46 37</code></pre>
+<p>Find All Instances of Philies in the 1970’s Hitting More Than 30 Homeruns.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID,teamID,yearID,HR FROM Batting
+WHERE teamID='PHI' and yearID&gt;='1970' and yearID&lt;='1979' and HR&gt;30&quot;
+sqldf(query) </code></pre>
+<pre><code>##    playerID teamID yearID HR
+## 1 johnsde01    PHI   1971 34
+## 2 schmimi01    PHI   1974 36
+## 3 luzingr01    PHI   1975 34
+## 4 schmimi01    PHI   1975 38
+## 5 schmimi01    PHI   1976 38
+## 6 luzingr01    PHI   1977 39
+## 7 schmimi01    PHI   1977 38
+## 8 luzingr01    PHI   1978 35
+## 9 schmimi01    PHI   1979 45</code></pre>
+<p>Find Every Instance of a Player Hitting More Than 50 Homeruns, but Let’s Have the Players With the Most Homeruns on Top.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID,teamID,yearID,HR FROM Batting
+WHERE HR&gt;50 
+ORDER BY HR&quot;
+sqldf(query) </code></pre>
+<pre><code>##     playerID teamID yearID HR
+## 1  kinerra01    PIT   1947 51
+## 2   mizejo01    NY1   1947 51
+## 3   mayswi01    NY1   1955 51
+## 4  fieldce01    DET   1990 51
+## 5  jonesan01    ATL   2005 51
+## 6  mantlmi01    NYA   1956 52
+## 7   mayswi01    SFN   1965 52
+## 8  fostege01    CIN   1977 52
+## 9  mcgwima01    OAK   1996 52
+## 10 rodrial01    TEX   2001 52
+## 11 thomeji01    CLE   2002 52
+## 12 davisch02    BAL   2013 53
+## 13  ruthba01    NYA   1920 54
+## 14  ruthba01    NYA   1928 54
+## 15 kinerra01    PIT   1949 54
+## 16 mantlmi01    NYA   1961 54
+## 17 ortizda01    BOS   2006 54
+## 18 rodrial01    NYA   2007 54
+## 19 bautijo02    TOR   2010 54
+## 20 wilsoha01    CHN   1930 56
+## 21 griffke02    SEA   1997 56
+## 22 griffke02    SEA   1998 56
+## 23 gonzalu01    ARI   2001 57
+## 24 rodrial01    TEX   2002 57
+## 25  foxxji01    PHA   1932 58
+## 26 greenha01    DET   1938 58
+## 27 howarry01    PHI   2006 58
+## 28  ruthba01    NYA   1921 59
+## 29  ruthba01    NYA   1927 60
+## 30 marisro01    NYA   1961 61
+## 31  sosasa01    CHN   1999 63
+## 32  sosasa01    CHN   2001 64
+## 33 mcgwima01    SLN   1999 65
+## 34  sosasa01    CHN   1998 66
+## 35 mcgwima01    SLN   1998 70
+## 36 bondsba01    SFN   2001 73</code></pre>
+<p>Find All Instances of a Player Striking Out Less Than 10 Times. Make Sure Each Player Had at Least 400 At-Bats. Players With the Least Strikeouts at the Top.</p>
+<pre class="r"><code>query&lt;-&quot;SELECT playerID,teamID,yearID,SO,AB FROM Batting
+WHERE SO&lt;10 and AB&gt;=400
+ORDER BY SO&quot;
+sqldf(query)</code></pre>
+<pre><code>##     playerID teamID yearID SO  AB
+## 1  doyleja01    NY1   1894  3 422
+## 2  seweljo01    NYA   1932  3 503
+## 3  seweljo01    CLE   1925  4 608
+## 4  seweljo01    CLE   1929  4 578
+## 5  seweljo01    NYA   1933  4 524
+## 6   wardjo01    NY1   1893  5 588
+## 7  holloch01    CHN   1922  5 592
+## 8  mcinnst01    CLE   1922  5 537
+## 9  wanerll01    PIT   1936  5 414
+## 10 wrighge01    BS1   1875  6 408
+## 11 broutda01    BSN   1889  6 485
+## 12 keelewi01    BLN   1894  6 590
+## 13  wardjo01    NY1   1894  6 540
+## 14 quinnjo02    SLN   1895  6 543
+## 15 mcinnst01    BSN   1924  6 581
+## 16 seweljo01    CLE   1926  6 578
+## 17  wardjo01    NY1   1889  7 479
+## 18 crossla01    PHI   1893  7 415
+## 19 quinnjo02    SLN   1893  7 547
+## 20 crossla01    PHI   1894  7 529
+## 21 vaughfa01    CIN   1896  7 433
+## 22 cochrmi01    PHA   1927  7 432
+## 23 seweljo01    CLE   1927  7 569
+## 24 traynpi01    PIT   1929  7 540
+## 25 muelldo01    NY1   1956  7 453
+## 26 connoro01    NY1   1885  8 455
+## 27 glassja01    IN3   1887  8 483
+## 28 glassja01    NY1   1890  8 512
+## 29 donovpa01    PIT   1893  8 499
+## 30 dungasa01    CHN   1893  8 465
+## 31 pinknge01    LS3   1893  8 446
+## 32 brodist01    BLN   1894  8 573
+## 33 quinnjo02    SLN   1894  8 405
+## 34 bierblo01    PIT   1895  8 466
+## 35 crossla01    PHI   1895  8 535
+## 36   hoydu01    CIN   1895  8 429
+## 37 roushed01    CIN   1921  8 418
+## 38 collied01    CHA   1923  8 505
+## 39 collied01    CHA   1925  8 425
+## 40 speaktr01    WS1   1927  8 523
+## 41 cochrmi01    PHA   1929  8 514
+## 42 seweljo01    NYA   1931  8 484
+## 43 wanerll01    PIT   1933  8 500
+## 44 verbaem01    PHI   1947  8 540
+## 45 ansonca01    CHN   1883  9 413
+## 46 broutda01    DTN   1887  9 500
+## 47   hoydu01    WAS   1893  9 564
+## 48 bierblo01    PIT   1894  9 525
+## 49 broutda01    BLN   1894  9 525
+## 50 milledo01    SLN   1894  9 481
+## 51 keelewi01    BLN   1896  9 544
+## 52 mckeaed01    CL4   1896  9 571
+## 53 speaktr01    CLE   1918  9 471
+## 54  dealch01    CHN   1921  9 422
+## 55 mcinnst01    BOS   1921  9 584
+## 56 severha01    SLA   1921  9 472
+## 57  highan01    BSN   1926  9 476
+## 58 summaho01    CLE   1926  9 581
+## 59 seweljo01    CLE   1928  9 588
+## 60  ricesa01    WS1   1929  9 616
+## 61 leachfr01    NY1   1931  9 515
+## 62 busched01    PHA   1945  9 416
+## 63 holmeto01    BSN   1945  9 636
+## 64 boudrlo01    CLE   1948  9 560
+## 65 mitchda01    CLE   1952  9 511</code></pre>
+</div>
 
 
 
