--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@ sqldf(query)</code></pre>
 ## 24 thomamy01   1927    NYA  0
 ## 25  weraju01   1927    NYA  1</code></pre>
 </div>
-<div id="instances-of-limitations" class="section level2">
-<h2>Instances of Limitations</h2>
+<div id="examples-of-more-specific-inquiries" class="section level2">
+<h2>Examples of More Specific Inquiries</h2>
 <p>Find All Instances Where Yankees Have Hit 40 Homeruns or More.</p>
 <pre class="r"><code>query&lt;-&quot;SELECT playerID,teamID,yearID,HR FROM Batting
 WHERE teamID='NYA' and HR&gt;=40&quot;
