September 19th second

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ $(document).ready(function () {
 <hr />
 <div id="filtering-columns-and-rows" class="section level2">
 <h2>Filtering Columns and Rows</h2>
-<p>with SQL, one can filter columns with SELECT and rows with WHERE. Let’s try an example with the Lahman baseball database. First, we need to load the appropriate packages.</p>
+<p>With SQL, One Can Filter Columns With SELECT and Rows With WHERE. Let’s Try An Example With the Lahman Baseball Database. First, We Need to Load the Appropriate Packages.</p>
 <pre class="r"><code>library(Lahman)
 library(sqldf)</code></pre>
 <p>Now, Suppose We Would Like to See the Homerun Totals for the 1927 Yankees. We Could Write the Following:</p>
